Correction of footer's alignement bug

--- a/content/styles/style.scss
+++ b/content/styles/style.scss
@@ -131,6 +131,10 @@ li:hover {
     color: $color-text-big-tittle;
     text-align: center;
     padding: 90px 0px;
+
+    #p-footer{
+        text-align: center;
+    }
 }
 
 /*
